[package]
name = "rusty-spider"
version = "0.1.0"
authors = ["Curt Beattie <spaceshaker.geo@yahoo.com>"]
edition = "2024"
rust-version = "1.86.0"

[dependencies]
anyhow = { version = "1.0.98" }
clap = { version = "4.5.37", features = ["derive"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
thiserror = { version = "2.0.12" }
url = { version = "2.5.4" }
reqwest = { version = "0.12.15" }
robots_txt = { version = "0.7.0" }
scraper = { version = "0.23.1" }
mime = { version = "0.3.17" }